--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         }
     ],
     "dependencies": {
+        "build": "^0.1.4",
         "cordova-android": "^6.2.3",
         "cordova-ios": "^4.4.0",
         "cordova-plugin-console": "1.0.5",
