--- a/package.json
+++ b/package.json
@@ -1,54 +1,55 @@
 {
-    "name": "the-defender-app",
-    "version": "1.1.1",
-    "description": "the-defender-app: An Ionic project",
-    "devDependencies": {
-        "@ionic/app-scripts": "^3.1.11",
-        "@ionic/v1-toolkit": "1.0.5",
-        "gulp": "^3.5.6",
-        "gulp-clean-css": "^3.7.0",
-        "gulp-rename": "^1.2.0",
-        "gulp-sass": "^3.1.0"
-    },
-    "cordovaPlugins": [
-        "cordova-plugin-whitelist",
-        "cordova-plugin-console",
-        "cordova-plugin-device",
-        "cordova-plugin-statusbar",
-        "cordova-plugin-splashscreen",
-        "ionic-plugin-keyboard"
-    ],
-    "cordovaPlatforms": [
-        "ios",
-        {
-            "platform": "ios",
-            "version": "",
-            "locator": "ios"
-        }
-    ],
-    "dependencies": {
-        "build": "^0.1.4",
-        "cordova-android": "^6.2.3",
-        "cordova-ios": "^4.4.0",
-        "cordova-plugin-console": "1.0.5",
-        "cordova-plugin-device": "1.1.4",
-        "cordova-plugin-splashscreen": "~4.0.1",
-        "cordova-plugin-statusbar": "^2.4.1",
-        "cordova-plugin-whitelist": "1.3.1",
-        "ionic-plugin-keyboard": "~2.2.1",
-        "natives": "^1.1.4"
-    },
-    "cordova": {
-        "plugins": {
-            "cordova-plugin-console": {},
-            "cordova-plugin-device": {},
-            "cordova-plugin-splashscreen": {},
-            "cordova-plugin-whitelist": {},
-            "ionic-plugin-keyboard": {},
-            "cordova-plugin-statusbar": {}
-        },
-        "platforms": [
-            "android"
-        ]
+  "name": "the-defender-app",
+  "version": "1.1.1",
+  "description": "the-defender-app: An Ionic project",
+  "devDependencies": {
+    "@ionic/app-scripts": "^3.1.11",
+    "@ionic/v1-toolkit": "1.0.5",
+    "gulp": "^3.5.6",
+    "gulp-clean-css": "^3.7.0",
+    "gulp-rename": "^1.2.0",
+    "gulp-sass": "^3.1.0"
+  },
+  "cordovaPlugins": [
+    "cordova-plugin-whitelist",
+    "cordova-plugin-console",
+    "cordova-plugin-device",
+    "cordova-plugin-statusbar",
+    "cordova-plugin-splashscreen",
+    "ionic-plugin-keyboard"
+  ],
+  "cordovaPlatforms": [
+    "ios",
+    {
+      "platform": "ios",
+      "version": "",
+      "locator": "ios"
     }
+  ],
+  "dependencies": {
+    "build": "^0.1.4",
+    "cordova-android": "^6.2.3",
+    "cordova-ios": "4.5.5",
+    "cordova-plugin-console": "1.0.5",
+    "cordova-plugin-device": "1.1.4",
+    "cordova-plugin-splashscreen": "~4.0.1",
+    "cordova-plugin-statusbar": "^2.4.1",
+    "cordova-plugin-whitelist": "1.3.1",
+    "ionic-plugin-keyboard": "~2.2.1",
+    "natives": "^1.1.4"
+  },
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-console": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-whitelist": {},
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-statusbar": {}
+    },
+    "platforms": [
+      "android",
+      "ios"
+    ]
+  }
 }
